fix: blurred cover bg

--- a/styles/controls.css
+++ b/styles/controls.css
@@ -40,7 +40,7 @@ dialog {
   background: #000;
   color: #fff;
 
-  z-index: -1;
+  z-index: -2;
 
   display: flex;
   flex-direction: column;
